Opened 13 years ago

Closed 13 years ago

#2793 closed defect (fixed)

gbrp16 -> yuv conversion broken

Reported by: ami_stuff Owned by:
Priority: important Component: swscale
Version: git-master Keywords: regression tif
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

the output file have green tint

C:\>ffmpeg -i 1.tif out.bmp
ffmpeg version N-54766-g4f1d3e0 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jul 16 2013 02:39:32 with gcc 4.5.0 (GCC) 20100414 (Fedora MinGW 4.5.
0-1.fc14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm -lpthread' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snap
shots/build/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/s
napshots/build/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3
--enable-nonfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-
libvorbis --enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-
libopencore-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      52. 39.100 / 52. 39.100
  libavcodec     55. 18.102 / 55. 18.102
  libavformat    55. 12.102 / 55. 12.102
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 81.101 /  3. 81.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
Input #0, image2, from '1.tif':
  Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: tiff, gbrp16le, 320x240, 25 tbr, 25 tbn, 25 tbc
Output #0, image2, to 'out.bmp':
  Metadata:
    encoder         : Lavf55.12.102
    Stream #0:0: Video: bmp, bgr24, 320x240, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (tiff -> bmp)
Press [q] to stop, [?] for help
frame=    1 fps=0.0 q=-1.0 Lsize=N/A time=00:00:00.04 bitrate=N/A
video:225kB audio:0kB subtitle:0 global headers:0kB muxing overhead -100.009546%

Attachments (2)

1.tif (298.6 KB ) - added by ami_stuff 13 years ago.
320x240gbrp16le.raw (450.0 KB ) - added by Carl Eugen Hoyos 13 years ago.

Download all attachments as: .zip

Change History (5)

by ami_stuff, 13 years ago

Attachment: 1.tif added

comment:1 by ami_stuff, 13 years ago

Summary: tiff: fix planar 16bittiff: fix planar 48bpp

by Carl Eugen Hoyos, 13 years ago

Attachment: 320x240gbrp16le.raw added

comment:2 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedswscale
Keywords: regression tif added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Summary: tiff: fix planar 48bppgbrp16 -> yuv conversion broken
Version: unspecifiedgit-master

Regression since 02001a3.

$ ffmpeg -f rawvideo -pix_fmt gbrp16le -s 320x240 -i 320x240gbrp16le.raw -pix_fmt yuvj420p out.jpg
ffmpeg version N-54792-g9d01bf7 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jul 18 2013 10:48:21 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 40.100 / 52. 40.100
  libavcodec     55. 18.102 / 55. 18.102
  libavformat    55. 12.102 / 55. 12.102
  libavdevice    55.  3.100 / 55.  3.100
  libavfilter     3. 81.101 /  3. 81.101
  libswscale      2.  4.100 /  2.  4.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
[rawvideo @ 0x3636ac0] Estimating duration from bitrate, this may be inaccurate
Input #0, rawvideo, from '320x240gbrp16le.raw':
  Duration: 00:00:00.04, start: 0.000000, bitrate: 92160 kb/s
    Stream #0:0: Video: rawvideo, gbrp16le, 320x240, 92160 kb/s, 25 tbr, 25 tbn, 25 tbc
[swscaler @ 0x362f0e0] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x3644d20] deprecated pixel format used, make sure you did set range correctly
[swscaler @ 0x3652740] deprecated pixel format used, make sure you did set range correctly
Output #0, image2, to 'out.jpg':
  Metadata:
    encoder         : Lavf55.12.102
    Stream #0:0: Video: mjpeg, yuvj420p, 320x240, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (rawvideo -> mjpeg)
Press [q] to stop, [?] for help
frame=    1 fps=0.0 q=0.0 Lsize=N/A time=00:00:00.04 bitrate=N/A
video:10kB audio:0kB subtitle:0 global headers:0kB muxing overhead -100.219868%

comment:3 by Michael Niedermayer, 13 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.